--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,11 +15,11 @@
     --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: #0a0a0a;
-        --foreground: #ededed;
-    }
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
 
 body {
