--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@plugin '@tailwindcss/typography';
 @config "../../tailwind.config.ts";
 
 :root {
@@ -15,11 +16,18 @@
     --font-mono: var(--font-geist-mono);
 }
 
-
 body {
     background: var(--background);
     color: var(--foreground);
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.ProseMirror p.is-editor-empty:first-child::before {
+    content: attr(data-placeholder);
+    float: left;
+    color: #6b7280;
+    pointer-events: none;
+    height: 0;
 }
 
 button {
