[Design] 토스트 위치 정가운데로 변경, 노트 페이지 max-width 설정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,6 +78,12 @@ button:disabled {
     ) !important;
 }
 
+.Toastify__toast-container--top-center {
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+}
+
 /* note 임시작성 toast custom */
 #noteWrite .Toastify__toast {
     background: transparent !important;
