--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 body {
     background: var(--background);
     color: var(--foreground);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font-pretendard), Arial, Helvetica, sans-serif;
 }
 
 .ProseMirror p.is-editor-empty:first-child::before {
